--- a/css/style.css
+++ b/css/style.css
@@ -108,47 +108,157 @@ footer{
 /* Step 1: Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
 
+nav li:hover, li:focus{
+  text-decoration: underline;
+}
 
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
 
+.skip{
+  position: absolute;
+  top: -40px;
+  visibility: hidden;
+}
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 
+.skip:focus{
+  position: absolute;
+  top: 20px;
+  visibility: visible;
+}
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
 
-
+:focus {
+  border: 2px 2px 2px 2px solid black;
+}
 
 /* Step 4: Write selector/rule property to style the container */
+
+.container{
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-gap: 15px;
+  align-items: center;
+  box-sizing: border-box;
+}
 
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
 
+ .container div:first-child{
+  grid-column: 1 / -1;
+  background-image: url("../images/header.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
+}
 
 /* Steps 6 and 7: Write the selector/rule properties to add place the next elements in the next
  four rows in the grid. */
+
+
+.about {
+  grid-column:  2 / span 1;
+  grid-row-start: 2;
+
+}
+.method{
+  grid-column:  2 / span 1;
+  grid-row-start: 3;
+  
+}
+
+.clients{
+  grid-column:  2 / span 1;
+  grid-row-start: 4;
+  
+}
+
+.contact{
+  grid-column:  2 / span 1;
+  grid-row-start: 5;
+  
+}
+
+.about-image {
+  grid-column:  1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 2;
+}
+
+ .method-image {
+  grid-column:  1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 3;
+}
+
+.clients-image {
+  grid-column:  1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 4;
+}
+
+.contact-image{
+  grid-column:  1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row-start: 5;
+}
+
 
       /*This will be a lot of rules.... but be strategic and combine seletors*/
 
 
  /* Step 8: Write the selector/rule property to style the .text-block class. */
 
+ .text-block{
+  text-align: center;
+  margin: auto;
+}  
 
 /* Add your media query here */
 
-
+@media screen and (min-width: 800px) {
+  
   /* Step 9: Write the selector/rule property to style the nav element */
-
+  nav{
+    text-align: right;
+    padding:30px 0 px 30px 0px;
+  }
  
   /* Step 10: Write the selector/rule property to update the .container class */
+  .container{
+    display: grid;
+    grid-template-columns: 50px auto 500px auto 50px;
+  }
 
 
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
 
+  .about, .clients, .method-image, .contact-image{
+    grid-column-start: 3;
+    grid-column-end: 5;
+  }
+
+  .method, .contact, .about-image, .clients-image{
+    grid-column-start: 2;
+    grid-column-end: 4;
+  }
 
 
  /* Step 13:Write the selector/rule property to update the .text-block class */
-
+ .text-block{
+  
+  max-height: 250px;
+  overflow: hidden;
+ }
+}
